# integrals

./: CMakeLists.txt  README.md  config.cpp  config.h  config.txt  consistent.cpp  integral.cpp  integral.h  parallel.cpp  test_and_compare.py  time_measure.h
